--- a/challenges/hackers-gambit/Dockerfile
+++ b/challenges/hackers-gambit/Dockerfile
@@ -5,23 +5,23 @@ RUN apt-get update && apt-get install -y python3 socat && rm -rf /var/lib/apt/li
 WORKDIR /app
 COPY . .
 
-COPY start.sh /opt/
-RUN chmod +x /opt/start.sh
-
+# Build the Go binary -> /app/server
 RUN make
 
 RUN mkdir /challenge && chmod 700 /challenge
 
-COPY start.sh /opt/
-RUN chmod +x /opt/start.sh
-
-
-RUN tar czvf /challenge/artifacts.tar.gz ciphertext.bin
+# Bundle artifacts for players
+RUN tar czvf /challenge/artifacts.tar.gz ciphertext.bin starting-board.txt
 
 ARG FLAG
-
 RUN /app/setup-challenge.py
 
+# Let cmgr know this is an nc port named "nc" on 3000
+# PUBLISH 3000 AS nc
 EXPOSE 3000
+
+# Copy the correct start script
+COPY start.sh /opt/start.sh
+RUN chmod +x /opt/start.sh
 
 CMD ["/opt/start.sh"]
